--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/lucid-slugify": "^1.0.3",
+    "adonis-kue": "^5.0.1",
     "mysql": "^2.17.1"
   },
   "devDependencies": {
