--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,12 @@
   },
   "extends": ["standard"],
   "globals": {
-    "use": true,
     "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
+    "SharedArrayBuffer": "readonly",
+    "use": "true"
   },
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
+    "ecmaVersion": 2018
   },
   "rules": {}
 }
