--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@adonisjs/validator": "^5.0.6",
     "adonis-acl": "^1.1.1",
     "adonis-kue": "^5.0.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "pg": "^7.11.0"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
