--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "migrate": "ENV_SILENT=true node ace migration:run --force",
+    "seed": "ENV_SILENT=true node ace seed --force",
     "test": "node ace test"
   },
   "keywords": [
